--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 layout: default
 ---
 
+<head>
+	<link rel="shortcut icon" type="image/x-icon" href="/favicon.ico?">
+</head>
+
 {% for post in paginator.posts %}
 <!-- main articles -->
 <h2 class="text-left">
